--- a/sm1/index.html
+++ b/sm1/index.html
@@ -137,6 +137,9 @@ function myFunction() {
 <a href="#Statistical Methods 1 (2023)">Statistical Methods 1 (2023)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
+<a href="#Survival tips">Survival tips</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
 <a href="#Reference materials">Reference materials</a>
 </li>
 </ul>
@@ -163,6 +166,10 @@ things (code snippets, data sets etc) here from time to time.
 
 
 <h2><a
+name="Survival tips">Survival tips</a></h2>
+Please read <a href="survival.html">these tips</a>. 
+
+<h2><a
 name="Reference materials">Reference materials</a></h2>
 The lecture notes are the main reference materials. You should also
 take a look at  the following  books. The lectures
@@ -173,7 +180,7 @@ will <i>not</i>  follow the books.
 <b>Statistics</b> by <i>Witte and Witte</i>
 </dt>
 
-<dd>The book that is closes to being our main textbook. It is an
+<dd>The book that is closest to being our main textbook. It is an
 easy-going book, not too ambitious.</dd>
 
 
@@ -225,10 +232,33 @@ explore R.</dd>
 
 <dd>Another introductory book for  R.</dd>
 
-
-
-
 </dl>
+
+
+<h3>Comments</h3>
+To post an anonymous comment, click on the "Name" field. This
+will bring up an option saying "I'd rather post as a guest."
+<p></p><!--
+begin disqus code --> <div id="disqus_thread"></div>
+<script>
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+var disqus_config = function () {
+this.page.url = ""; // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = "sm1index"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://txtbk.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript><!-- end disqus code --> 
 <hr/>
 <table width="100%" border="0">
 <tr>
