--- a/sm1/news.html
+++ b/sm1/news.html
@@ -1,9 +1,21 @@
 <html>
 <body>
 <table border="1">
+
+<tr><td>Aug 02, 2023</td><td>The Statistics class tomorrow will be held during the usual
+hours (<i>not</i> during Prof Goswami's vacant slots).
+</td>
+</tr>
+
+<tr><td>Aug 02, 2023</td>
+<td><a href="lec1.html" target="naya">Gist of lecture 1</a> has been
+posted.</td></tr>
+
+
 <tr><td>July 31, 2023</td><td>
 Prof A Goswami being away, we shall shift our Statistics class to
 his slot for today.</td></tr>
+
 
 </table>
 </body>
