--- a/sm1/survival.html
+++ b/sm1/survival.html
@@ -287,7 +287,7 @@ begin disqus code --> <div id="disqus_thread"></div>
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "http://arnabc74.github.io/sm1/survival.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://arnabc74.github.io/sm1/survival.html"; // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "survival"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
