--- a/sm1/index.html
+++ b/sm1/index.html
@@ -137,6 +137,9 @@ function myFunction() {
 <a href="#Statistical Methods 1 (2023)">Statistical Methods 1 (2023)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
+<a href="#Brief lecture notes">Brief lecture notes</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
 <a href="#Survival tips">Survival tips</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
@@ -164,6 +167,17 @@ things (code snippets, data sets etc) here from time to time.
 
 <p></p>
 
+
+<h2><a
+name="Brief lecture notes">Brief lecture notes</a></h2>
+
+<ol type="">
+
+<li>
+<a href="lec1.html">July 31, 2023</a>
+</li>
+
+</ol>
 
 <h2><a
 name="Survival tips">Survival tips</a></h2>
