--- a/sm1/index.html
+++ b/sm1/index.html
@@ -178,8 +178,9 @@ name="Brief lecture notes">Brief lecture notes</a></h2>
 </li>
 
 <li>Aug 03, 2023:
-[<a href="b1_2023show.pdf">slides</a>}{<a href="fern.r">R
-code</a>}{<a href="lec2.html">summary</a>]</li>
+[<a href="b1a_2023show.pdf">slides</a>] [<a href="fern.r">R
+code for fractal</a>] [<a href="rsessAug03.txt">R
+session</a>] [<a href="lec2.html">summary</a>]</li>
 
 </ol>
 
