--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,11 @@
 <body>
 <table border="1">
 
+<tr><td>Aug 02, 2023</td>
+<td>Lecture 2 materials have been
+posted.</td></tr>
+
+
 <tr><td>Aug 02, 2023</td><td>The Statistics class tomorrow will be held during the usual
 hours (<i>not</i> during Prof Goswami's vacant slots).
 </td>
