--- a/sm1/index.html
+++ b/sm1/index.html
@@ -180,7 +180,32 @@ name="Brief lecture notes">Brief lecture notes</a></h2>
 <li>Aug 03, 2023:
 [<a href="b1a_2023show.pdf">slides</a>] [<a href="fern.r">R
 code for fractal</a>] [<a href="rsessAug03.txt">R
-session</a>] [<a href="lec2.html">summary</a>]</li>
+session</a>] [<a href="lec2.html">summary</a>]
+We have learned the following R functions and operators:
+<blockquote>
+
+<font size="+1" color="red"><code>+,-,*,/,=, ==</code></font>,
+<font size="+1" color="red"><code>sin</code></font>,
+<font size="+1" color="red"><code>sample</code></font>,
+<font size="+1" color="red"><code>c</code></font>,
+<font size="+1" color="red"><code>sum,  </code></font>
+<font size="+1" color="red"><code>table</code></font>,
+<font size="+1" color="red"><code>barplot</code></font>,
+<font size="+1" color="red"><code>length</code></font>,
+<font size="+1" color="red"><code>cumsum</code></font>,
+<font size="+1" color="red"><code>seq</code></font>,
+<font size="+1" color="red"><code>:,</code></font>
+<font size="+1" color="red"><code>plot</code></font>,
+<font size="+1" color="red"><code>lines</code></font>,
+<font size="+1" color="red"><code>q</code></font>
+
+</blockquote>
+To learn more about them, lookup their helps by typing a
+question mark(?) followed by the name (enclose the name in quotes
+if it is some symbol like ":" or "*"). In particular, there is a
+wealth of information that is worth knowing
+for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color="red"><code>barplot</code></font> and <font size="+1" color="red"><code>lines</code></font>.
+</li>
 
 </ol>
 
