--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,9 @@
 <body>
 <table border="1">
 
+<tr><td>Aug 07, 2023</td>
+<td><a href="q1.pdf">First question set</a> posted.</td></tr>
+
 <tr><td>Aug 02, 2023</td>
 <td>Lecture 2 materials have been
 posted.</td></tr>
