--- a/sm1/index.html
+++ b/sm1/index.html
@@ -207,9 +207,8 @@ wealth of information that is worth knowing
 for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color="red"><code>barplot</code></font> and <font size="+1" color="red"><code>lines</code></font>.
 </li>
 
-<li>Aug 03, 2023:
-[R session] 
-[summary]
+<li>Aug 07, 2023:
+[<a href="lec3.html">summary</a>]
 
 <img src="image/alert.png"><a href="q1.pdf">First question set</a>
 
