--- a/sm1/index.html
+++ b/sm1/index.html
@@ -152,6 +152,12 @@ name="Statistical Methods 1 (2023)">Statistical Methods 1 (2023)</a></h1>
 This is the course webpage for Statistical Methods 1 for
 B.Stat(hons) first year students (2023). I shall post various
 things (code snippets, data sets etc) here from time to time.
+
+<p></p>
+
+<a href="https://classroom.google.com/c/NjE3NzIwOTMyMjA5?cjc=nv4afuy">Google
+classroom joining link</a>
+
 <p></p>
 
 <table align="right" width="50%">
