--- a/sm1/index.html
+++ b/sm1/index.html
@@ -154,9 +154,7 @@ B.Stat(hons) first year students (2023). I shall post various
 things (code snippets, data sets etc) here from time to time.
 
 <p></p>
-
-<a href="https://classroom.google.com/c/NjE3NzIwOTMyMjA5?cjc=nv4afuy">Google
-classroom joining link</a>
+Please join Google classroom with <a href="https://classroom.google.com/c/NjE3NzIwOTMyMjA5?cjc=nv4afuy">this joining link</a>
 
 <p></p>
 
