--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,9 @@
 <body>
 <table border="1">
 
+<tr><td>Aug 11, 2023</td>
+<td>Two videos added.</td></tr>
+
 <tr><td>Aug 10, 2023</td>
 <td>Please join Google classroom using the link provided in the
 class webpage (also sent to your google group).</td></tr>
