--- a/sm1/index.html
+++ b/sm1/index.html
@@ -221,6 +221,13 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 
 </li>
 
+<li>Aug 10, 2023:
+[<a href="lec4.html">summary</a>]
+[<a href="RsessAug10.txt">R session</a>]
+[<a href="https://youtu.be/UAeiOFU4zWo">Video showing how to use an R script file</a>]
+[<a href="https://youtu.be/lSBZh7a1zTY">Video showing audio data collection</a>]
+</li>
+
 </ol>
 
 <h2><a
