--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,10 @@
 <body>
 <table border="1">
 
+<tr><td>Aug 16, 2023</td>
+<td><a target="naya" href="q2.pdf">Second question set</a> posted.</td></tr>
+
+
 <tr><td>Aug 11, 2023</td>
 <td>Two videos added.</td></tr>
 
