--- a/sm1/index.html
+++ b/sm1/index.html
@@ -228,7 +228,45 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 [<a href="https://youtu.be/lSBZh7a1zTY">Video showing audio data collection</a>]
 </li>
 
+
+
+<li>Aug 14, 2023:
+[<a href="lec5.html">summary with R code</a>]
+
+<ul>
+
+<li>Cricket model: 
+[<a href="Sachin%20Tendulkar%20Batting%20Stats.xlsx">Full multivariate data
+(Excel format)</a>]
+[<a href="run.txt">Extracted runs data (text file)</a>]
+</li>
+
+</ul>
+
+
+<ul>
+
+<li>Probit model: 
+[<a href="probit.txt">Raw data</a>]
+</li>
+
+</ul>
+
+
+<ul>
+
+<li>Maxwell model: 
+[<a href="sm1maxshow.pdf">Slides</a>]
+</li>
+
+</ul>
+
+<img src="image/alert.png"><a href="q2.pdf">Second question set [Due date: Aug 23, 2023]</a>
+
+</li>
+
 </ol>
+
 
 <h2><a
 name="Survival tips">Survival tips</a></h2>
