--- a/sm1/index.html
+++ b/sm1/index.html
@@ -265,6 +265,28 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 
 </li>
 
+
+<li>Aug 17, 2023:
+[<a href="lec6.html">summary</a>]
+<ul>
+
+<li>Google model: 
+[<a href="google.r">R code</a>]
+</li>
+
+<li>Capture-recapture model: 
+[<a href="caprecap.r">R code</a>]
+</li>
+
+<li>Mendel's model: 
+[<a href="mndl.r">R code</a>]
+</li>
+
+</ul>
+
+
+</li>
+
 </ol>
 
 
