--- a/sm1/lec5.html
+++ b/sm1/lec5.html
@@ -538,13 +538,13 @@ mathematical property of normal PDF.
 <p></p>
 Consider the function 
 $$
-\Phi (x) = \int_{- \infty} ^ x \frac{1}{\sqrt{\pi}} e^{-t^2/2}\, dt.
+\Phi (x) = \int_{- \infty} ^ x \frac{1}{\sqrt{2\pi}} e^{-t^2/2}\, dt.
 $$
 This is clearly (?) a strictly increasing (and hence one-one),
 continuous, onto function from ${\mathbb R}$ to $(0,1).$ Now it
 is easy (?) to see that 
 $$
-F (x) = \int_{- \infty} ^ x \frac{1}{\sqrt{\pi}\sigma} e^{-\frac{1}{2
+F (x) = \int_{- \infty} ^ x \frac{1}{\sqrt{2\pi}\sigma} e^{-\frac{1}{2
 \sigma^2}(t-\mu)^2}\, dt = \Phi \left(\frac{x-\mu}{\sigma}\right).
 $$
 So Finney applied $\Phi ^{-1} $ to both sides of the
