--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,11 @@
 <body>
 <table border="1">
 
+<tr><td>Aug 19, 2023</td>
+<td>Minor mistake corrected in <a target="naya"
+href="lec5.html">lecure 5</a>. F(x) and Phi(x) were missing a
+sqrt2) in the denominator.</td></tr>
+
 <tr><td>Aug 16, 2023</td>
 <td><a target="naya" href="q2.pdf">Second question set</a> posted.</td></tr>
 
