--- a/sm1/index.html
+++ b/sm1/index.html
@@ -122,7 +122,7 @@ function myFunction() {
   else
     tphldr.innerHTML = header[index].innerHTML
 }
-</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
+</script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="file:///home/asu/na/v/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
 <script src="../tools/CanvasMatrix.src.js"></script>
@@ -285,6 +285,9 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 </ul>
 
 
+</li>
+
+<li>Aug 21, 2023: <a href="Rhelp.html">R practice problems</a>
 </li>
 
 </ol>
