--- a/sm1/news.html
+++ b/sm1/news.html
@@ -2,6 +2,9 @@
 <body>
 <table border="1">
 
+<tr><td>Aug 21, 2023</td>
+<td>R practice problems added.</td></tr>
+
 <tr><td>Aug 19, 2023</td>
 <td>Minor mistake corrected in <a target="naya"
 href="lec5.html">lecure 5</a>. F(x) and Phi(x) were missing a
