--- a/sm1/index.html
+++ b/sm1/index.html
@@ -290,6 +290,25 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 <li>Aug 21, 2023: <a href="Rhelp.html">R practice problems</a>
 </li>
 
+
+<li>Aug 24, 2023:
+<ul>
+<li>[<a href="im.r">R code for image processing</a>]
+[<a href="https://youtu.be/QemnHaINeUc">video for image processing</a>]</li>
+
+<li>
+[<a href="https://youtu.be/Xq43Y0pfzpc?si=f5kDWtxT-tVtoXve">Video for understanding CSV format</a>]
+[<a href="https://youtu.be/BYX2XY_8IPM">Video for manipulating CSV files using R</a>]
+</li>
+
+<li>Amusement park ride accelerometer data: [<a href="one.csv">one.csv</a>]
+[<a href="two.csv">two.csv</a>]
+[<a href="three.csv">three.csv</a>]</li>
+
+</ul>
+
+</li>
+
 </ol>
 
 
