--- a/sm1/index.html
+++ b/sm1/index.html
@@ -293,7 +293,9 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 
 <li>Aug 24, 2023:
 <ul>
-<li>[<a href="im.r">R code for image processing</a>]
+<li>[<a href="toucantrans.png">png image</a>]
+[<a href="gorkhey.jpg">jpg image</a>]
+[<a href="im.r">R code for image processing</a>]
 [<a href="https://youtu.be/QemnHaINeUc">video for image processing</a>]</li>
 
 <li>
