--- a/sm1/index.html
+++ b/sm1/index.html
@@ -307,6 +307,22 @@ for <font size="+1" color="red"><code>plot</code></font>, <font size="+1" color=
 [<a href="two.csv">two.csv</a>]
 [<a href="three.csv">three.csv</a>]</li>
 
+
+</ul>
+
+</li>
+
+<li>Aug 28, 2023:
+<ul>
+<li>
+<img src="image/alert.png"><a href="q3.pdf">Third question set</a>[Due
+date: Sep 05, 2023]</li>
+
+
+<li>[<a href="q3help.html">Some help for Question set 3</a>]</li>
+
+<li>[<a href="haldane.pdf">Haldane's lecture</a>]</li>
+
 </ul>
 
 </li>
